# cmake_project_starter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/00_basic_example/: 00_basic_example.cc  CMakeLists.txt  basic_example_00.cc
examples/01_basic_example/: 01_basic_example.cc  CMakeLists.txt  basic_example_01.cc
include/: foo.h.in  hello.h  hello.h.in
src/: foo.cc  hello.cc
